--- a/pset6_scrollytelling.html
+++ b/pset6_scrollytelling.html
@@ -181,6 +181,7 @@
                     <p class="text2opacity"> it affects many households</p>
                     <p class="text3opacity"> there is an average of 4.46 people per household</p>
           </div>
+     <img class="img" src="https://pulitzercenter.org/sites/default/files/styles/orig_optimized/public/07-23-20/web-pp-02-mkohut_climate_migrants-final-print-002.jpg?itok=iswOZRCo">
           
       </div>
 
