--- a/pset6_scrollytelling.html
+++ b/pset6_scrollytelling.html
@@ -161,7 +161,7 @@
      	<div class="col-4">
           <br><br>
 
-          <p id="text1"> We have interviews from almost 5,000 individuals representing distinct households across Honduras, El Salvador, and Guatemala. While migration travel is thought of as singular, the effects of migration ripple through the entire family.
+          <p id="text1" class = "mb-5" > We have interviews from almost 5,000 individuals representing distinct households across Honduras, El Salvador, and Guatemala. While migration travel is thought of as singular, the effects of migration ripple through the entire family.
           </p>
           <br> <br> <br> <br> <br> <br> <br> <br> <br>
 
