--- a/pset6_scrollytelling.html
+++ b/pset6_scrollytelling.html
@@ -174,12 +174,11 @@
           </p>
           <br> <br> <br> <br> <br> <br> <br> <br> <br>
 
-          <p id="text2"> In our data set, families are composed of many different types, ranging from bi-parental (1), single parent (2), extensive (3), or other (4). Here, you can see the type of household broken down by the size of our household is 4.46 people. We can see that there are an average of 4.46 people per household.
+          <p id="text2" class = "mb-5"> In our data set, families are composed of many different types, ranging from bi-parental (1), single parent (2), extensive (3), or other (4). Here, you can see the type of household broken down by the size of our household is 4.46 people. We can see that there are an average of 4.46 people per household.
            </p>
-          <br> <br> <br> <br> <br> <br> <br> <br> <br>
 
           <p id="text3"> By dividing the breaking up of families across families that have migrated and those that have not, we can begin to unpack how migration affects across the families.
-
+	  </p>
 
         </div>
 
