--- a/pset6_scrollytelling.html
+++ b/pset6_scrollytelling.html
@@ -172,12 +172,11 @@
 
           <p id="text1" class = "mb-5" > We have interviews from almost 5,000 individuals representing distinct households across Honduras, El Salvador, and Guatemala. While migration travel is thought of as singular, the effects of migration ripple through the entire family.
           </p>
-          <br> <br> <br> <br> <br> <br> <br> <br> <br>
 
           <p id="text2" class = "mb-5"> In our data set, families are composed of many different types, ranging from bi-parental (1), single parent (2), extensive (3), or other (4). Here, you can see the type of household broken down by the size of our household is 4.46 people. We can see that there are an average of 4.46 people per household.
            </p>
 
-          <p id="text3"> By dividing the breaking up of families across families that have migrated and those that have not, we can begin to unpack how migration affects across the families.
+          <p id="text3" class = "mb-5"> By dividing the breaking up of families across families that have migrated and those that have not, we can begin to unpack how migration affects across the families.
 	  </p>
 
         </div>
@@ -196,13 +195,11 @@
 <div class="row">
 
     <div class="col-4">
-          <p id="text4"> In our data set, families are composed of many different types, ranging from bi-parental (1), single parent (2), extensive (3), or other (4). Here, you can see the type of household broken down by the size of our household is 4.46 people. We can see that there are an average of 4.46 people per household.
+       <p id="text4" class = "mb-5"> In our data set, families are composed of many different types, ranging from bi-parental (1), single parent (2), extensive (3), or other (4). Here, you can see the type of household broken down by the size of our household is 4.46 people. We can see that there are an average of 4.46 people per household.
            </p>
-           <br> <br> <br> <br> <br> <br> <br> <br> <br>
 
-      <p id="text5"> In our data set, families are composed of many different types, ranging from bi-parental (1), single parent (2), extensive (3), or other (4). Here, you can see the type of household broken down by the size of our household is 4.46 people. We can see that there are an average of 4.46 people per household.
+      <p id="text5" class = "mb-5" > In our data set, families are composed of many different types, ranging from bi-parental (1), single parent (2), extensive (3), or other (4). Here, you can see the type of household broken down by the size of our household is 4.46 people. We can see that there are an average of 4.46 people per household.
         </p>
-        <br> <br> <br> <br> <br> <br> <br> <br> <br>
     </div>
 
     <div class="col-8">
@@ -215,17 +212,10 @@
 
 <div class="row">
     <div class="col-4">
-        <p id="text6"> Importance of Remittances on Everyday Life
+        <p id="text6" class = "mb-5" > Importance of Remittances on Everyday Life
         </p>
-        <br><br>
 
-              <p id="text7"> Here we will talk about the effect of remittances on both those that have migrated and those that have not.
-              </p>
-            <br><br>
-
-            <p> Finally, we will also look into households more closely. </p>
-
-            <br><br>
+        <p id="text7" class = "mb-5" > Here we will talk about the effect of remittances on both those that have migrated and those that have not. Finally, we will also look into households more closely. </p>
       </div>
 
 
